# turbovec-mcp

./: .gitignore  .mcp.json  LICENSE  README.md  cli.py  deploy.py  embeddings.py  http_server.py  indexer.py  pyproject.toml  requirements.txt  server.py
.claude-plugin/: plugin.json
