[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "turbovec-mcp"
version = "0.1.0"
description = "TurboVec MCP server and CLI for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "turbovec",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "mcp[cli]>=1.0",
    "typer>=0.12",
]

[project.scripts]
turbovec = "cli:app"

[tool.setuptools.packages.find]
where = ["."]
